# 2bash

./: .gitignore  2bash.opam  LICENSE  dockerfile  makefile  readme.org  syntax.txt
emacs/: 2bash-mode.el  readme.org
lib/: builtin.ml  builtin.mli  builtin_utils.ml  builtin_utils.mli  compile.ml  generate.ml  ir.ml  jbuild  lexer.mll  parser.mly  position.ml  scope.ml  scope.mli  syntax.ml  type_check.ml
lib/builtin_lib/: jbuild  string.ml  utils.ml
lib/type/: ir.ml  jbuild  position.ml
test/: builtin_test.ml  jbuild  test.ml  util.ml
